Bugfix - visible images over menu

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3380,6 +3380,7 @@
 	width: 100%;
 	height: 2em;
 	top: 0;
+	z-index: 10001
 }
 
 .social-promo img {
